--- a/main.html
+++ b/main.html
@@ -41,7 +41,18 @@
       }
     </style>
 
-    <ul></ul>
+    <ul id ='band'>
+		<li>
+			The Virupaksha Temple
+		</li>
+		<li>
+			Victoria Memorial
+		</li>
+		<li>
+			Tajmahal
+		</li>
+		
+	</ul>
 
     <script type="text/javascript" src="./script.js"></script>
   </body>
